--- a/PlaceAutoComplete/build.gradle
+++ b/PlaceAutoComplete/build.gradle
@@ -25,8 +25,8 @@ ext {
 }
 
 android {
-    compileSdkVersion 23
-    buildToolsVersion "23.0.2"
+    compileSdkVersion 24
+    buildToolsVersion "24.0.0"
 
     useLibrary 'org.apache.http.legacy'
 
@@ -39,6 +39,7 @@ android {
         targetSdkVersion 23
         versionCode 1
         versionName "1.0.1"
+        multiDexEnabled true
     }
     buildTypes {
         release {
@@ -51,8 +52,11 @@ android {
 dependencies {
     compile fileTree(dir: 'libs', include: ['*.jar'])
     testCompile 'junit:junit:4.12'
-    compile 'com.android.support:appcompat-v7:23.1.1'
-    compile 'com.android.support:design:23.1.1'
+    compile 'com.google.code.gson:gson:2.4'
+    compile 'com.android.support:appcompat-v7:24.2.0'
+    compile 'com.android.support:design:24.2.0'
+    compile 'com.google.android.gms:play-services-location:9.4.0'
+    compile 'com.google.android.gms:play-services:9.4.0'
 }
 
 apply from: 'https://raw.githubusercontent.com/nuuneoi/JCenter/master/installv1.gradle'
